--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ body{
     left: 10px; 
     right: 10px; 
     bottom: 10px;
-    color:white;
+    color:black;
     line-height: 1.2;
 }
 
@@ -118,6 +118,7 @@ ul > li {
     font-size: 16px;
     background-color: #ececec;
     padding: 30px 0;
+    margin-bottom: .5em;
 }
 
 .recipeItem img{
