--- a/css/index.css
+++ b/css/index.css
@@ -3,25 +3,29 @@
     font-weight: lighter;
   }
   
-  body {
-      background-color:white;
-  }
-  
-  /* Overriding bootstrap styles */
-  .container-fluid{
-      padding: 0;
-  }
-  .row{
-      margin: 0;
-  }
- /* End: Overriding bootstrap styles */
+body {
+    background-color:white;
+}
 
-  h1 {
+.center {
+    justify-content: center;
+}    
+
+/* Overriding bootstrap styles */
+.container-fluid{
+    padding: 0;
+}
+.row{
+    margin: 0;
+}
+/* End: Overriding bootstrap styles */
+
+h1 {
     font-family: sans-serif;
     font-weight: 300;
     font-size: 1.8em;
     color: #a6ea1e;
-  }
+}
 
   h2{
       font-size: 1.8rem;
@@ -50,6 +54,7 @@
     font-size: 20px;
     font-weight: bold;
     padding: 10px 20px 10px 20px;
+    margin-bottom: 1em;
     text-decoration: none;
   }
 
@@ -61,11 +66,12 @@
     background-image: -o-linear-gradient(top, #a6ea1e, #4a7933);
     background-image: linear-gradient(to bottom, #a6ea1e, #4a7933);
     color: #ffffff;
+    outline: none;
   }
   
   /* Begin: Styles for the slider/carousel */
   #slider{
-    background-color: #a6ea1e;
+    background-color: #a6ea1e; /*bright green */
     height: 350px;
     width: 100%;
     margin: 0 auto 25px;
@@ -112,16 +118,8 @@ p.purpose {
     color: #c6c6c6;
 }
 
-#form_search label:first-child{
-    margin-right: .5em;
-}
-
-label[for="cook"]{
-    margin-right: 10px;
-}
-
-form#form_search{
-    margin: 0 auto;
+.nl-field {
+    color: #b14943;
 }
 
 .search_query{
@@ -142,6 +140,8 @@ form#form_search{
     margin: 0;
     padding-top: 20px;
     background-color: #d6d9d0;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .infoPage h3{
     font-size: 1.3rem;
@@ -194,7 +194,7 @@ form#form_search{
 
 .humour{
     background-color: #a6ea1e;
-    padding: 10px 2em;
+    padding: 10px 1em;
     border-radius: 10px;
 }
 
@@ -207,7 +207,7 @@ form#form_search{
 }
 .orange{
     color: darkorange;
-    font-size: 1em;
+    font-size: 1.2em;
 }
 
 #back{
@@ -217,6 +217,7 @@ form#form_search{
 
 #back, .humour > p{
     text-align: center;
+    padding-top: 2em;
 }
 
 .carrots{
@@ -229,28 +230,28 @@ form#form_search{
 /*BEGIN : Styles for the results section */
 
 .results{
-padding: 0;
-color: white;
-text-align: center;
-padding: 1em 0;
-margin-bottom: 3em;
-background: url('../images/background1.jpg') no-repeat;
-background-attachment: fixed;
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
+    padding: 0;
+    color: white;
+    text-align: center;
+    padding: 1rem 3rem;
+    margin-bottom: 0;
+    position: relative;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-image: url("../images/veggie_bg.jpg");
 }
-
 .recipeItem, .restaurantItem{
-list-style-type: none;
-margin-bottom: 1em;
-background-color: rgba(0,0,0,.5);
-padding: 20px 0 5px;
-}
+    list-style-type: none;
+    margin-bottom: 1em;
+    background-color: rgba(0,0,0,.5);
+    padding: 20px 0 5px;
+    }
 
 .recipeItem:hover, .recipeItem:focus, .restaurantItem:hover, .restaurantItem:focus,
 .restaurantItem:active, .recipeItem:active{
-outline: solid 1px #fff;
+    outline: solid 1px #fff;
 }
 
 .noResults{
@@ -258,31 +259,38 @@ outline: solid 1px #fff;
 }
 
 .getDirections{
-color: #a6ea1e;
-font-weight: 600;
+    padding-left: 1em;
+    font-weight: 600;
+}
+
+.address{
+    padding: 0 20px;
 }
 
 .getDirections:hover{
-color:#007bff
+    color:#007bff
 }
 
 .results h2{
-text-shadow: 1px 1px 2px black, 9px 7px 1em #4a7933, 0 0 0.2em #4343cc;
+    text-shadow: 1px 1px 2px black, 9px 7px 1em #4a7933, 0 0 0.2em #4343cc;
+    letter-spacing: 3px;
+    padding: 15px 0;
 }
 
 .results h3{
-font-size: 1rem;
-font-weight: bold;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 0 20px;
 }
 .pageCtrl{
     clear: both;
 }
 
 .pageCtrl a{
-background-color: #4a7933;
-padding: 13px;
-border-radius: 5px;
-box-shadow: 0px 0px 17px #ffffff;
+    background-color: #4a7933;
+    padding: 13px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 17px #ffffff;
 }
 
 .pageCtrl .btn_prev{
@@ -313,11 +321,11 @@ h1 {
 }
 
 #slider{
-  background-color: #a6ea1e;
-  height: 330px;
-   width: 100%;
-   padding: 20px;
-   margin: 0 auto 25px;
+    background-color: #a6ea1e;
+    height: 330px;
+    width: 100%;
+    padding: 20px;
+    margin: 0 auto 25px;
 }
 
 #slider h2 {
@@ -330,17 +338,17 @@ h1 {
 }
 
 #slider h3{
-  text-align: left;
-  font-family:sans-serif;
-  padding-bottom: 1em;
-  font-weight: 200;
+    text-align: left;
+    font-family:sans-serif;
+    padding-bottom: 1em;
+    font-weight: 200;
 }
 
 .carousel-item{
- width: 80%;
- margin-left: 10%;
- margin-right: 10%;
- color: #3c4d34;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    color: #3c4d34;
 }
 
 header{
@@ -359,22 +367,23 @@ header{
 .restaurantItem , .recipeItem{
     width: 40%;
     float: left;
-    min-height: 375px;
+    min-height: 450px;
     margin: 0 5% 1em;
 }
 
 .orange{
     font-weight: bold;
 }
-
 }
 
 @media screen and (min-width:1200px){
-    .restaurantItem, .recipeItem {
-        min-height: 380px;
+    h2{
+        font-size: 2em;
     }
-
     #slider {
         height: 300px;
+    }
+    .restaurantItem , .recipeItem{
+        min-height: 420px;
     }
 }
